# sonet-rs

./: Cargo.toml  README.md
rust-client/: Cargo.toml
rust-client/src/: main.rs
rust-common/: Cargo.toml
rust-common/src/: lib.rs
rust-common/src/api/: mod.rs  sonet.rs
rust-common/src/api/components/: client.rs  server.rs
rust-common/src/api/util/: mod.rs  optional.rs  packet_deserializer.rs  packet_handler.rs
rust-common/src/core/: mod.rs  sonetclient.rs  sonetserver.rs
rust-common/src/core/test/: mod.rs
rust-common/src/packets/: mod.rs
rust-common/src/test/: mod.rs
rust-server/: Cargo.toml
rust-server/src/: main.rs
sonet-client/: Cargo.toml
sonet-client/src/: main.rs
sonet-common/: Cargo.toml
sonet-common/src/api/: mod.rs  packets.rs  sonet.rs
sonet-common/src/api/buffer/: buffer.rs  mod.rs  sonet_buffer.rs
sonet-common/src/api/components/: client.rs  server.rs
sonet-common/src/api/util/: java_types.rs  mod.rs  optional.rs  packet_deserializer.rs  packet_serializer.rs  sonet_data.rs
sonet-common/src/core/: sonetclient.rs  sonetserver.rs
sonet-server/: Cargo.toml
src/: buffer.rs  client.rs  connection.rs  lib.rs  main.rs  packet.rs  serializer.rs  server.rs  util.rs
src/buffer/: mod.rs  read.rs  write.rs
